--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ nav, #nav-box {
     display: inline;
 }
 
-li, h1, h3, h2, .specialtxt {
+li, h1, h3, h2, h4, .specialtxt {
     font-family: 'Lora', serif;
 }
 
@@ -83,6 +83,7 @@ main, .aboutmain {
 
 .hero img {
     max-width: 100%;
+    height: auto;
 }
 
 .jacket-cards {
@@ -130,7 +131,8 @@ main, .aboutmain {
 /**About page **/
 
 .aboutimg {
-    max-width: 100%
+    max-width: 100%;
+    height: auto;
 }
 
 .about-grids div{
@@ -220,16 +222,30 @@ ul {
 }
 
 /*All jackets page*/
-
-.all-products {
-    display: grid;
-    grid-template-columns: repeat(3,minmax(0, 1fr));
-    grid-gap: 10px;
+@media (min-width: 700px) {
+    .all-products {
+        display: grid;
+        grid-template-columns: repeat(3,minmax(0, 1fr));
+        grid-gap: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        cursor: pointer;
+    }
 }
 
+@media (max-width: 700px) {
+    .all-products {
+        display: grid;
+        grid-template-columns: repeat(2,minmax(0, 300px));
+        grid-gap: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        cursor: pointer;
+    }
+}
 .all-products img {
     width: 100%;
-    max-height: 393px;
+    height: auto;
 }
 
 .single-jacket {
